# LinuxProgramming

./: README.md
API_test/: char2int  char2int.c  fd  fd.c  fget  fgetc_test.c  sizeof  sizeof_test.c  sprintf  sprintf.c  strcmp  strcmp.c  strcmp2  strcmp2.c  strlen  strlen.c
Chat/: CMakeLists.txt  chat.md  main.c
Chat/client/: CMakeLists.txt  client.c  client2.c
Chat/server/: CMakeLists.txt  server.c  server2.c
asm/executable/: data_decl  hello  print_rax
asm/hello/: data_decl.asm  print_rax.asm
asm/shift/: check_sar.asm
bit_calc/: init.c
bitcalc/: binary.c  bit_converse.c  faster_bit_count.c  get_top_bit.c  init.c  naive_bit_count.c
cat/: cat.c  cat2  cat2.c  cat_escape.c  escape_test  my_cat  my_cat.c  nrow.c
daytime/: daytime.md  login1.sekiya-lab.info  tcp_client  tcp_client.c
grep/: grep  grep.c  grep_option  grep_with_option.c
head/: cat_option.c  head  head.c  tail  tail.c
hello/: args.c  bell.c  hello.c  sizeof  sizeof.c
server/: CMakeLists.txt  homework2.md  server.c
server_fork/: CMakeLists.txt  server.c
server_select/: CMakeLists.txt  server.c
server_thread/: CMakeLists.txt  server.c
